changed saving strings, chars and numbers inside the token. changed lexer, parser and tests accordingly.